@@ -18,6 +18,7 @@
 - Fixed merge of config {pull}17399[17399]
 - Handle abs paths on windows correctly {pull}17461[17461]
 - Improved cancellation of agent {pull}17318[17318]
+- Fixed process spawning on Windows {pull}17751[17751]
 - Fix issues when running `mage package` for all the platforms. {pull}17767[17767]
 - Rename the User-Agent string from Beats Agent to Elastic Agent. {pull}17765[17765]
 - Remove the kbn-version on each request to the Kibana API. {pull}17764[17764]
